<resources>
    <string name="app_name">悬浮窗执行</string>
    <string name="setting_out">内容为空</string>
    <string name="edit">在这里输入自定义的指令~</string>
    <string name="isroot">以root执行</string>
    <string name="isout">接收返回消息</string>
    <string name="start">启动悬浮窗</string>
    <string name="remove">移除悬浮窗</string>
    <string name="doubleclick">双击模式</string>
    <string name="move">移动模式</string>
    <string name="textview">
        执行指令：  %1$s \n
        root执行： %2$b \n
        接收消息：  %3$b \n
        移动模式：  %4$b \n
        双击模式：  %5$b
    </string>
</resources>
